--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -12,6 +12,7 @@
 		</ul>
 	</div>
 	<a href="boys/selectmale/selectmale"  class="choice"></a>
-	<div class="finger-left"></div>
-	<div class="finger-right"></div>
+	<img class="finger-left" src="/images/left.png"></img>
+	<img class="finger-right" src="/images/right.png"></img>
+	<img class="mongolia-layer" src="/images/wen.png"></img>
 </div>
