--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -1,13 +1,20 @@
 <div class="my-make">
 	<div class="pic-box  swiper-container men-box">
 		<ul class="men-god clearfix swiper-wrapper">
-			<li class="swiper-slide next"><img class="main-img" src="/images/huge.png" alt=""></li>
+<!-- 			<li class="swiper-slide"><img class="main-img" src="/images/original1.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original2.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original3.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original4.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original5.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original6.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/original7.jpg" alt=""></li> -->
+			<li class="swiper-slide"><img class="main-img" src="/images/huge.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/liyifeng.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/songzhongji.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/wangjunkai.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/wangyuan.png" alt=""></li>
 			<li class="swiper-slide"><img class="main-img" src="/images/wuyifan.png" alt=""></li>
-			<li class="swiper-slide prev"><img class="main-img" src="/images/yiyangqianxi.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="/images/yiyangqianxi.png" alt=""></li>
 		</ul>
 	</div>
 
@@ -18,12 +25,50 @@
 	</ul>	
 
 	<div id="flyItem" class="fly_item"><img src=""></div>
-	<ul class="designer-pic clearfix">
-		<li><img src="/images/huge_little.png" alt=""></li>
-		<li><img src="/images/wangyuan.png" alt=""></li>
-		<li><img src="/images/wangyuan.png" alt=""></li>
-		<li><img src="/images/wangyuan.png" alt=""></li>
-	</ul>	
+	<div class="character-effect">
+		<ul class="designer-pic clearfix hegu none">
+			<li><img src="/images/original1.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure1.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint1.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style1.jpg" alt="" effectIndex="4"></li>
+		</ul>		
+		<ul class="designer-pic clearfix luhang none">
+			<li><img src="/images/original2.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure2.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint2.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style2.jpg" alt="" effectIndex="4"></li>
+		</ul>	
+		<ul class="designer-pic clearfix songzhongji none">
+			<li><img src="/images/original3.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure3.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint3.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style3.jpg" alt="" effectIndex="4"></li>
+		</ul>		
+		<ul class="designer-pic clearfix wangjunkai none">
+			<li><img src="/images/original4.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure4.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint4.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style4.jpg" alt="" effectIndex="4"></li>
+		</ul>		
+		<ul class="designer-pic clearfix wangyuan none">
+			<li><img src="/images/original5.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure5.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint5.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style5.jpg" alt="" effectIndex="4"></li>
+		</ul>		
+		<ul class="designer-pic clearfix wuyifan none">
+			<li><img src="/images/original6.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure6.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint6.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style6.jpg" alt="" effectIndex="4"></li>
+		</ul>		
+		<ul class="designer-pic clearfix yiyangqianxi none">
+			<li><img src="/images/original7.jpg" alt="" effectIndex="1"></li>
+			<li><img src="/images/exposure7.jpg" alt="" effectIndex="2"></li>
+			<li><img src="/images/paint7.jpg" alt="" effectIndex="3"></li>
+			<li><img src="/images/european-style7.jpg" alt="" effectIndex="4"></li>
+		</ul>
+	</div>	
 
 	<ul class="designer-effect clearfix">
 		<li><img src="/images/btn_a.png" alt=""></li>
@@ -41,7 +86,7 @@
 		<li><img src="/images/user.png" alt=""></li>
 	</ul>
 
-	<a href="../shareavatar/shareavatar" class="want-mank">
+	<a href="../getavatar/getavatar" class="want-mank">
 		<img src="/images/girl.png" alt="">
 	</a>
 </div>
