--- a/public/boys/src/app/views/obtainsuccess/ObtainSuccessView.html
+++ b/public/boys/src/app/views/obtainsuccess/ObtainSuccessView.html
@@ -1,15 +1,14 @@
 <div class="obtain-success">
 	<div class="get-effect">
-		<img src="" alt="">
+		<img src="/images/hg-exposure1.png" alt="">
 	</div>
 	<div class="effect-pic">
-		<img src="" alt="">
+		<img src="/images/paint1.jpg" alt="">
 	</div>
-	<div class="author">
+	<div class="author clearfix">
 		<img src="/images/yxy.png" alt="">
 	</div>
 	<div class="tup">
 		<img src="/images/tu.png" alt="">
 	</div>
-
 </div>
