--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -739,3 +739,44 @@ input::-webkit-input-placeholder {
         }
     }
 }
+.obtain-success {
+    height: 100%;
+    background: #fbd398 url(/images/2bg.png) 0 0 no-repeat;
+    background-size: contain;
+    .get-effect {
+        padding-top: 1.82rem;
+        margin-bottom: 0.5rem;
+        img {
+            display: block;        
+            width: 58%;
+            height: 4.25rem;
+            margin: 0 auto;
+        }
+    }
+    .effect-pic {
+        margin-bottom: 0.36rem;
+        img {
+            display: block;        
+            width: 76%;
+            height: 20.32rem;
+            margin: 0 auto;
+            border-radius: 8%;
+        }
+    }
+    .author {
+        padding-right: 12%;
+        margin-bottom: 3.11rem;
+        img{
+            float: right;
+            width: 35%;
+            height: 1.29rem;
+        }
+    }
+    .tup {
+        img {
+            display: block;
+            width: 100%;
+            height: 7.32rem;
+        }
+    }
+}
