--- a/public/css/main.css
+++ b/public/css/main.css
@@ -835,3 +835,42 @@ input::-webkit-input-placeholder {
   height: 100%;
   background: rgba(255, 255, 255, 0);
 }
+.obtain-success {
+  height: 100%;
+  background: #fbd398 url(/images/2bg.png) 0 0 no-repeat;
+  background-size: contain;
+}
+.obtain-success .get-effect {
+  padding-top: 1.82rem;
+  margin-bottom: 0.5rem;
+}
+.obtain-success .get-effect img {
+  display: block;
+  width: 58%;
+  height: 4.25rem;
+  margin: 0 auto;
+}
+.obtain-success .effect-pic {
+  margin-bottom: 0.36rem;
+}
+.obtain-success .effect-pic img {
+  display: block;
+  width: 76%;
+  height: 20.32rem;
+  margin: 0 auto;
+  border-radius: 8%;
+}
+.obtain-success .author {
+  padding-right: 12%;
+  margin-bottom: 3.11rem;
+}
+.obtain-success .author img {
+  float: right;
+  width: 35%;
+  height: 1.29rem;
+}
+.obtain-success .tup img {
+  display: block;
+  width: 100%;
+  height: 7.32rem;
+}
