--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -18,11 +18,11 @@
 		</ul>
 	</div>
 
-	<ul class="designer-name clearfix">
+<!-- 	<ul class="designer-name clearfix">
 		<li><img src="/images/design.png" alt=""></li>
 		<li><img src="/images/design.png" alt=""></li>
 		<li><img src="/images/design.png" alt=""></li>
-	</ul>	
+	</ul>	 -->
 
 	<div id="flyItem" class="fly_item"><img src=""></div>
 	<div class="character-effect">
