--- a/public/boys/src/app/views/shareavatar/ShareAvatarView.html
+++ b/public/boys/src/app/views/shareavatar/ShareAvatarView.html
@@ -1,14 +1,92 @@
     <div class="share-avatar">
         <div class="share-success-tips"></div>
         <div class="avatar-style ">
-            <img class="after" src="/images/liyifeng_big@2x.png">
-            <img class="before" src="/images/liyifeng_little@2x.png">
-            <div class="fans"></div>
+        <div class="after">
+            <div class="avatar-effect none">
+               <img src="/images/exposure1.jpg" alt="" effectIndex="2">
+               <img src="/images/paint1.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style1.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure2.jpg" alt="" effectIndex="2">
+               <img src="/images/paint2.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style2.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure3.jpg" alt="" effectIndex="2">
+               <img src="/images/paint3.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style3.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure4.jpg" alt="" effectIndex="2">
+               <img src="/images/paint4.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style4.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure5.jpg" alt="" effectIndex="2">
+               <img src="/images/paint5.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style5.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure6.jpg" alt="" effectIndex="2">
+               <img src="/images/paint6.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style6.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="avatar-effect none">
+               <img src="/images/exposure7.jpg" alt="" effectIndex="2">
+               <img src="/images/paint7.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style7.jpg" alt="" effectIndex="4">
+            </div>
+        </div>
+        <div class="before">
+            <img src="/images/original1.jpg">
+            <img src="/images/original2.jpg">
+            <img src="/images/original3.jpg">
+            <img src="/images/original4.jpg">
+            <img src="/images/original5.jpg">
+            <img src="/images/original6.jpg">
+            <img src="/images/original7.jpg">
+        </div>
         </div>
         <div class="effect-list">
-            <span><img src="/images/4btn_c@3x.png"></span>
+            <div class="effect none">
+               <img src="/images/exposure1.jpg" alt="" effectIndex="2">
+               <img src="/images/paint1.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style1.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure2.jpg" alt="" effectIndex="2">
+               <img src="/images/paint2.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style2.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure3.jpg" alt="" effectIndex="2">
+               <img src="/images/paint3.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style3.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure4.jpg" alt="" effectIndex="2">
+               <img src="/images/paint4.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style4.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure5.jpg" alt="" effectIndex="2">
+               <img src="/images/paint5.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style5.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure6.jpg" alt="" effectIndex="2">
+               <img src="/images/paint6.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style6.jpg" alt="" effectIndex="4">
+            </div>            
+            <div class="effect none">
+               <img src="/images/exposure7.jpg" alt="" effectIndex="2">
+               <img src="/images/paint7.jpg" alt="" effectIndex="3">
+               <img src="/images/european-style7.jpg" alt="" effectIndex="4">
+            </div>
+  <!--           <span><img src="/images/4btn_c@3x.png"></span>
             <span><img src="/images/4btn_a@3x.png"></span>
-            <span><img src="/images/4btn_b@3x.png"></span>
+            <span><img src="/images/4btn_b@3x.png"></span> -->
         </div>
         <div class="tips"><img src="/images/04tips01.png"></div>
         <div id="uploadImage" class="btn-panel">
