--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -78,7 +78,7 @@
 	</ul>
 	<ul class="receive-user clearfix">
  <% _.each(avatars,function(i, img){ %> 
-		<li><img src="<%= img %>" alt=""></li>
+		<li><img src="<%= i %>" alt=""></li>
  <% }) %> 
 	</ul>
 	<a href="../getavatar/getavatar" class="want-mank">
