--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -81,7 +81,7 @@
 		<li><img src="<%= i %>" alt=""></li>
  <% }) %> 
 	</ul>
-	<a href="../getavatar/getavatar" class="want-mank">
+	<a href="" class="want-mank">
 		<img src="/images/girl.png" alt="">
 	</a>
 </div>
