--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -367,7 +367,7 @@ input::-webkit-input-placeholder {
         border: none;
         border-radius: 9%;
         background: #fff;
-        box-shadow: 0 0.36rem 0.86rem rgba(93,137,181,0.3);
+        /*box-shadow: 0 0.36rem 0.86rem rgba(93,137,181,0.3);*/
         .after {
             overflow: hidden;
             position: relative;
