--- a/public/css/main.css
+++ b/public/css/main.css
@@ -469,7 +469,7 @@ input::-webkit-input-placeholder {
   border: none;
   border-radius: 9%;
   background: #fff;
-  box-shadow: 0 0.36rem 0.86rem rgba(93, 137, 181, 0.3);
+  /*box-shadow: 0 0.36rem 0.86rem rgba(93,137,181,0.3);*/
 }
 .get-avatar .avatar-style .after {
   overflow: hidden;
