--- a/public/boys/src/app/views/uploadagain/UploadAgainView.html
+++ b/public/boys/src/app/views/uploadagain/UploadAgainView.html
@@ -4,7 +4,7 @@
         <div class="nickname"><img src="/images/07designer-nickname.png"></div>
         <div class="reason"><img src="/images/07reason01.png"></div>
     </div>
-    <div class="btn-panel"></div>
+    <div id="uploadImage" class="btn-panel"></div>
     <div class="qr">
         <img class="qrcode" src="/images/qr.png">
         <div class="qrtips"></div>
