--- a/public/boys/src/app/views/uploadagain/UploadAgainView.html
+++ b/public/boys/src/app/views/uploadagain/UploadAgainView.html
@@ -1,8 +1,8 @@
 <div class="upload-again">
-    <div class="designer">
+    <div class="designer clearfix">
         <div class="avatar"><img src="/images/4btn_c@3x.png"></div>
+        <div class="reason"></div>
         <div class="nickname"><img src="/images/07designer-nickname.png"></div>
-        <div class="reason"><img src="/images/07reason01.png"></div>
     </div>
     <div id="uploadImage" class="btn-panel"></div>
     <div class="qr">
