--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -582,9 +582,11 @@ input::-webkit-input-placeholder {
         overflow: auto;
         margin: 1.14rem;
         .avatar {
+            float: left;
             width: 4.29rem;
             height: 4.29rem;
             border-radius: 9%;
+            margin-right: 5%;
             img{
                 width: 100%;
                 height: 100%;
@@ -593,6 +595,8 @@ input::-webkit-input-placeholder {
             }
         }
         .nickname {
+            clear: both;
+            width: 70%;
             margin: 0.64rem 0.2rem;
             img {
                 height: 0.89rem;
@@ -600,13 +604,12 @@ input::-webkit-input-placeholder {
             }
         }
         .reason {
-            position: absolute;
-            left: 5.25rem;
-            top: 0.2rem;
-            img {
-                height: 4.11rem;
-                width: auto;
-            }
+            float: left;
+            width: 50%;
+            padding-top: 1rem;
+            line-height: 1.29rem;
+            font-size: 1rem;
+
         }
     }
     .btn-panel {
