--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -48,7 +48,7 @@
         </div>
         <div class="fans"></div>
     </div>
-    <div class="tips">
+    <div id="downloadImage" class="tips">
         <div class="random none">
             <img src="/images/color1.png">
             <img src="/images/double1.png">
