--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -1,5 +1,6 @@
 <div class="wrap-index">
 	<div class="wrap-kong" id="select_boy"></div>
+	<div class="index-pic"><img src="/images/pic.png" alt=""></div>
 	<div class="pic-box swiper-container">
 		<ul class="men-god clearfix swiper-wrapper">
 			<li class="swiper-slide"><img class="main-img" src="/images/original1.jpg" alt=""></li>
